[package]
name = "annotate"
version = "0.1.0"
authors = ["banana <jgjin@umich.edu>"]
edition = "2018"

[dependencies]
chrono = "0.4"
id3 = "0.3"
lazy_static = "1.3"
mp3-duration = "0.1"
percent-encoding = "*"
regex = "1.1"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
